@@ -1,5 +1,6 @@
 maintenance etc/rebuildd
 rebuildd-init-build-system usr/sbin
+rebuildd-httpd usr/sbin
 rebuildd-job usr/sbin
 debian/rebuilddrc /etc/rebuildd
 templates usr/share/rebuildd
