@@ -5,6 +5,8 @@ rebuildd (0.2.0) UNRELEASED; urgency=low
     This adds a new state WAIT_LOCKED for locking jobs handled by a build.
   * Handle SIGINT like SIGTERM
   * Don't stock build_time, stock build_start and build_end
+  * Move http server outside, and standalone
+  * Add a bunch of filter possibility on Web interface
 
  -- Julien Danjou <acid@debian.org>  Tue, 10 Jul 2007 10:36:33 +0200
 
